--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "os"
 version = "0.1.0"
-edition = "2024"
+authors = ["Zhang"]
+edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+log = "0.4.28"
+[profile.release]
+debug = true
